--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,14 @@
 @import 'https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css';
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css';
-.custom-body, .body-fut {
+.base-style, .custom-body, .body-fut {
   background-color: rgba(12, 147, 236, 0.9647058824);
   color: rgba(10, 18, 61, 0.6431372549);
   font-family: Arial, sans-serif;
+}
+
+#content-container {
+  text-align: center;
+  gap: 10px;
 }
 
 header {
